Thu Oct 23 17:19:04 2014  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/source.rb (REXML::IOSource#encoding_updated): Fix a
	  bug that can't parse XML correctly when
	  Encoding.default_internal is different with XML
	  encoding. REXML::Source converts XML encoding on read. So IO
	  should not convert XML encoding.
	  Based on patch by NAKAMURA Usaku.
	  [ruby-dev:48686] [Bug #10418]

	* test/rexml/test_encoding.rb
	  (REXMLTests::EncodingTester#test_parse_utf16_with_utf8_default_internal):
	  Add the for the above case.

Thu Oct 23 16:29:02 2014  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_encoding.rb
	  (REXMLTests::EncodingTester#test_parse_utf16): Use meaningful
	  test name. "ticket" in the old test name means the ticket in
	  REXML's issue tracker. The REXML's issue tracker was gone. So
	  "ticket" is meaningless.

	* test/rexml/data/ticket_110_utf16.xml: Rename to ...
	* test/rexml/data/utf16.xml: ... this.

Thu Oct 23 16:18:11 2014  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_encoding.rb
	  (REXMLTests::EncodingTester#test_ticket_110): Fix expected and
	  actual order.
	  Patch by NAKAMURA Usaku. Thanks!!!

Thu Oct 23 10:47:16 2014  Eric Wong  <e@80x24.org>

	* insns.def (getlocal,setlocal): add comment to def/opt_operand.def

Thu Oct 23 10:22:41 2014  Eric Wong  <e@80x24.org>

	* test/ruby/test_process.rb (test_deadlock_by_signal_at_forking):
	  use IO#wait_readable instead of timeout

Thu Oct 23 10:22:24 2014  Eric Wong  <e@80x24.org>

	* test/ruby/test_process.rb (test_deadlock_by_signal_at_forking):
	  ensure exit! during fork failure

Thu Oct 23 10:21:21 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* NEWS: Added String#unicode_normalize(|!|d?) [ci skip]

Thu Oct 23 03:41:51 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* class.c (unknown_keyword_error): delete expected keywords
	  directly from raw table, so that the given block is not called.
	  [ruby-core:65837] [Bug #10413]
