@@ -318,6 +318,12 @@ class TestObject < Test::Unit::TestCase
       $VERBOSE = false
       def (Object.new).__send__; end
     INPUT
+
+    bug10421 = '[ruby-dev:48691] [Bug #10421]'
+    assert_in_out_err([], <<-INPUT, [], [], bug10421)
+      $VERBOSE = false
+      def (BasicObject.new).object_id; end
+    INPUT
   end
 
   def test_remove_method
